--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
   - 'CLOUDSDK_CONTAINER_USE_APPLICATION_DEFAULT_CREDENTIALS=true'
 - name: 'gcr.io/optimistic-balm-233816/bespin-cloudbuild:dev'
   args: ['$$TOKEN', '$REPO_NAME', '$COMMIT_SHA']
-  secretenv: ['TOKEN']
+  secretEnv: ['TOKEN']
   volumes:
   - name: 'kube'
     path: '/kube'
